%% Beleg-Lebenszyklus (Status-Maschine) — Teamlead-Sicht
stateDiagram-v2
    direction LR
    [*] --> needs_review: Import (prüfbedürftig)
    needs_review --> ready: freigeben
    [*] --> ready: Import (ok)
    ready --> assigned: Engine / Eingriff
    ready --> parked: parken
    parked --> ready: entparken
    assigned --> in_progress: Mitarbeiter startet
    in_progress --> completed: Beleg erledigt
    in_progress --> partially_completed: Teilabschluss
    in_progress --> issue_open: Problem gemeldet
    issue_open --> in_progress: Problem freigegeben
    partially_completed --> ready: Rest reaktivieren
    completed --> zst_done: Tagesabschluss (ZST-Export)
    needs_review --> cancelled: stornieren
    ready --> cancelled: stornieren
    parked --> cancelled: stornieren
    assigned --> cancelled: stornieren
    in_progress --> cancelled: stornieren
    zst_done --> [*]
    cancelled --> [*]
